Fix overflowing text

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -43,6 +43,17 @@
 	background-color: #fff;
 }
 
+.project-info .row {
+	width: inherit;
+}
+
+.project-info .row div {
+	width: inherit;
+}
+
+.project-info .row div p {
+	width: inherit;
+}
 
 #tag-cloud {
   width: 400px;
